# OrganPath

./: README.md  phyview.py  pyproject.toml  vcf2tree.py
src/organpath/: cli.py
