[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OrganPath"
version = "0.1.0"
description = "VCF to phylogeny pipeline for organelle genomes."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "zh384"}
]
license = {text = "MIT"}
dependencies = []

[project.scripts]
OrganPath = "organpath.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
