[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "organpath"
version = "0.1.0"
description = "VCF to phylogeny pipeline for organelle genomes."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "zh384"}
]
license = {text = "MIT"}
dependencies = []

[project.scripts]
OrganPath = "organpath.cli:main"
organpath = "organpath.cli:main"
PhyView = "organpath.cli:phyview_main"

[tool.setuptools.packages.find]
where = ["src"]
